update start_page and quickstart tutorials

--- a/docs/_source/getting_started/quickstart_workflow.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow.ipynb
@@ -14,7 +14,7 @@
         "\n",
         "Note\n",
         "\n",
-        "This workflow covers the `DatasetForTextClassification`, `DatasetForTokenClassification`, and `DatasetForText2Text`. The workflow for `FeedbackDataset` can be found [here](../getting_started/quickstart_workflow_feedback.html). Not sure which dataset to use? Check out our section on [choosing a dataset](../practical_guides/choose_dataset.html).\n",
+        "This workflow covers the `DatasetForTextClassification`, `DatasetForTokenClassification`, and `DatasetForText2Text`. The workflow for `FeedbackDataset` can be found [here](https://docs.argilla.io/en/latest/getting_started/quickstart_workflow_feedback.html). Not sure which dataset to use? Check out our section on [choosing a dataset](https://docs.argilla.io/en/latest/practical_guides/choose_dataset.html).\n",
         "\n",
         "</div>"
       ]
@@ -57,13 +57,15 @@
       "source": [
         "## Set Up Argilla\n",
         "\n",
-        "You can quickly deploy Argilla Server on [HF Spaces](https://huggingface.co/new-space?template=argilla/argilla-template-space).\n",
+        "If you have already deployed Argilla Server, then you can skip this step. Otherwise, you can quickly deploy it in two different ways:\n",
         "\n",
-        "Alternatively, if you want to run Argilla locally on your own computer, the easiest way to get Argilla UI up and running is to deploy on Docker:\n",
+        "* You can deploy Argilla Server on [HF Spaces](https://huggingface.co/new-space?template=argilla/argilla-template-space).\n",
         "\n",
-        "```\n",
-        "docker run -d --name quickstart -p 6900:6900 argilla/argilla-quickstart:latest\n",
-        "```\n",
+        "* Alternatively, if you want to run Argilla locally on your own computer, the easiest way to get Argilla UI up and running is to deploy on Docker:\n",
+        "\n",
+        "    ```\n",
+        "    docker run -d --name quickstart -p 6900:6900 argilla/argilla-quickstart:latest\n",
+        "    ```\n",
         "\n",
         "More info on Installation [here](../getting_started/installation/deployments/deployments.html)."
       ]
@@ -86,7 +88,16 @@
         "id": "klwYMH_rdv0m"
       },
       "source": [
-        "It is possible to connect to our Argilla instance by simply importing the Argilla library, which internally connects to the Argilla Server using the `ARGILLA_API_URL` and `ARGILLA_API_KEY` environment variables."
+        "It is possible to connect to our Argilla instance by simply importing the Argilla library and using the environment variables and `rg.init()`.\n",
+        "\n",
+        "* `ARGILLA_API_URL`: It is the url of the Argilla Server.\n",
+        "  * If you're using Docker, it is `http://localhost:6900` by default.\n",
+        "  * If you're using HF Spaces, it is constructed as `https://[your-owner-name]-[your_space_name].hf.space`.\n",
+        "* `ARGILLA_API_KEY`: It is the API key of the Argilla Server. It is `owner` by default.\n",
+        "* `HF_TOKEN`: It is the Hugging Face API token. It is only needed if you're using a [private HF Space](https://docs.argilla.io/en/latest/getting_started/installation/deployments/huggingface-spaces.html#deploy-argilla-on-spaces). You can configure it in your profile: [Setting > Access Tokens](https://huggingface.co/settings/tokens).\n",
+        "* `workspace`: It is a “space” inside your Argilla instance where authorized users can collaborate. It's `admin` by default.\n",
+        "\n",
+        "For more info about custom configurations like headers, workspace separation or access credentials, check our [config page](https://docs.argilla.io/en/latest/getting_started/installation/configurations/configurations.html)."
       ]
     },
     {
@@ -101,7 +112,7 @@
         "import os\n",
         "\n",
         "# Set your variable here\n",
-        "os.environ[\"ARGILLA_API_URL\"] = \"your_argilla_URL\"\n",
+        "os.environ[\"ARGILLA_API_URL\"] = \"http://localhost:6900\" # or https://[your-owner-name]-[your_space_name].hf.space\n",
         "os.environ[\"ARGILLA_API_KEY\"] = \"owner.apikey\"\n",
         "# os.environ['HF_TOKEN'] = \"your-hf-token\" # if you want to use your private HF Space"
       ]
@@ -129,22 +140,6 @@
     },
     {
       "cell_type": "markdown",
-      "id": "2ZyEUBBjbK7k",
-      "metadata": {
-        "id": "2ZyEUBBjbK7k"
-      },
-      "source": [
-        "`\"owner.apikey\"` is the default value for `ARGILLA_API_KEY` variable.\n",
-        "\n",
-        "`admin` is the name of the default workspace. A **workspace** is a “space” inside your Argilla instance where authorized users can collaborate.\n",
-        "\n",
-        "If you want to initialize a connection manually you can use `rg.init()`. For more info about custom configurations like headers and workspace separation, check our [config page](../getting_started/installation/configurations/configurations.html).\n",
-        "\n",
-        "If you want to customize the access credentials, take a look at our [user management section](../getting_started/installation/configurations/user_management.html)."
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "ae0038d1-86b1-4eb9-ada4-ae561ad25aa3",
       "metadata": {
         "id": "ae0038d1-86b1-4eb9-ada4-ae561ad25aa3"
@@ -165,7 +160,7 @@
         " - `prediction`: Add task-specific model predictions to the record (Optional);\n",
         " - `metadata`: Add some arbitrary metadata to the record (Optional);\n",
         "\n",
-        "A [Dataset](../conceptual_guides/data_model.html#other-datasets) in Argilla is a collection of records of the same type."
+        "A [Dataset](https://docs.argilla.io/en/latest/conceptual_guides/data_model.html#other-datasets) in Argilla is a collection of records of the same type."
       ]
     },
     {
@@ -1553,7 +1548,7 @@
         "id": "054e40cc-51f4-4321-b42a-2301775c0e9f"
       },
       "source": [
-        "We can now read this `Dataset` with Argilla, which will automatically create the records and put them in a [Argilla Dataset](../guides/features/datasets.ipynb)."
+        "We can now read this `Dataset` with Argilla, which will automatically create the records and put them in a [Argilla Dataset](https://docs.argilla.io/en/latest/reference/python/python_client.html#argilla.client.datasets.read_datasets)."
       ]
     },
     {
@@ -2127,7 +2122,7 @@
         "Argilla tries to make this relatively cumbersome approach as painless as possible.\n",
         "Via an intuitive and adaptive UI, its exhaustive search and filter functionalities, and bulk annotation capabilities, Argilla turns the manual annotation process into an efficient option.  \n",
         "\n",
-        "Look at our dedicated [feature reference](../reference/webapp/features.html) for a detailed and illustrative guide on manually annotating your dataset with Argilla."
+        "Look at our dedicated [feature reference](https://docs.argilla.io/en/latest/reference/webapp/features.html) for a detailed and illustrative guide on manually annotating your dataset with Argilla."
       ]
     },
     {
@@ -2159,8 +2154,8 @@
         "When guided by pre-trained models, it is common to see human annotators get influenced by them.\n",
         "Therefore, it is advisable to avoid pre-annotations when building a rigorous test set for the final model evaluation.\n",
         "\n",
-        "Check the [introduction tutorial](../tutorials//notebooks/labelling-tokenclassification-spacy-pretrained.ipynb) to learn to add predictions to the records.\n",
-        "And our [feature reference](../reference/webapp/features.md) includes a detailed guide on validating predictions in the Argilla web app."
+        "Check the [introduction tutorial](https://docs.argilla.io/en/latest/tutorials/notebooks/labelling-tokenclassification-spacy-pretrained.html) to learn to add predictions to the records.\n",
+        "And our [feature reference](https://docs.argilla.io/en/latest/reference/webapp/features.html) includes a detailed guide on validating predictions in the Argilla web app."
       ]
     },
     {
@@ -2190,8 +2185,8 @@
         "The downside of this approach is that it might be challenging to come up with working heuristic rules for some datasets.\n",
         "Furthermore, rules are rarely 100% precise and often conflict with each other. These noisy labels can be cleaned up using weak supervision and label models, or something as simple as majority voting. It is usually a trade-off between the amount of annotated data and the quality of the labels.\n",
         "\n",
-        "Check [our guide](../guides/techniques/weak_supervision.ipynb) for an extensive introduction to weak supervision with Argilla.\n",
-        "Also, check the [feature reference](../reference/webapp/features.md) for the Define rules mode of the web app and our [various tutorials](../tutorials/techniques/weak_supervision.md) to see practical examples of weak supervision workflows."
+        "Check [our guide](https://docs.argilla.io/en/latest/practical_guides/annotation_workflows/weak_supervision.html) for an extensive introduction to weak supervision with Argilla.\n",
+        "Also, check the [feature reference](https://docs.argilla.io/en/latest/reference/webapp/features.html#weak-labeling) for the Define rules mode of the web app and our [various tutorials](https://docs.argilla.io/en/latest/tutorials/techniques/weak_supervision.html) to see practical examples of weak supervision workflows."
       ]
     },
     {
@@ -2203,7 +2198,7 @@
       "source": [
         "## Train a model\n",
         "\n",
-        "The `ArgillaTrainer` is a wrapper around many of our favorite NLP libraries. It provides a very intuitive abstract workflow to facilitate simple training workflows using decent default pre-set configurations without having to worry about any data transformations from Argilla.  More info [here](../practical_guides/fine_tune.html)."
+        "The `ArgillaTrainer` is a wrapper around many of our favorite NLP libraries. It provides a very intuitive abstract workflow to facilitate simple training workflows using decent default pre-set configurations without having to worry about any data transformations from Argilla.  More info [here](https://docs.argilla.io/en/latest/practical_guides/fine_tune.html)."
       ]
     },
     {
