--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/use-metrics-007.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/use-metrics-007.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "In this part of our end-to-end series, we will evaluate the annotation results of our dataset using the `metrics` module. To see the previous steps, you can refer to the tutorials such as [creating the dataset](./create-dataset-001.ipynb), [adding responses and suggestions](./add-resoponses) or [training your model](./train-model-006.ipynb). Feel free to check out the [practical guides](../../../../practical_guides/practical_guides.md) page for more in-depth information.\n",
     "\n",
-    "After having your dataset annotated by the annotators, it is strongly recommended to evaluate the annotation results. This is especially important if you are planning to use the dataset for training your model. The `metrics` module provides you with the necessary tools to compare the annotated data against suggestions."
+    "After having your dataset annotated by the annotators, it is strongly recommended to evaluate the annotation results. Within the `metrics` module, we divide the evaluation metrics into two: Annotator Metrics and Agreement Metrics. **Annotator Metrics** are the metrics that you can employ to evaluate the performance of individual annotators against a gold standard. We have two options for this: either choosing the responses or the suggestions as the ground truth. As we will see, both will give us different perspectives regarding the performance of our annotators. In addition, we have the opportunity to unify the responses given by different annotators for a single record. This way, either the unified responses or the suggestions can be used as the ground truth.\n",
+    "\n",
+    "On the other hand, **Agreement Metrics** are the metrics that you can employ to evaluate the agreement between the annotators. Generally referred to as \"Inter-Annotator Agreement\" in the literature, this metric has various implementations developed by different researchers, some notable examples of which are Krippendorff's Alpha, Cohen's Kappa, Fleiss' Kappa, Scott's Pi, and Bennet, Albert and Goldstein's S. With these metrics, you can see how reliable the annotations are and how much the annotators agree with each other."
    ]
   },
   {
@@ -30,7 +32,11 @@
     "2. [Unify Responses](#Unify-Responses)\n",
     "3. [Annotator Metrics](#Annotator-Metrics)\n",
     "    1. [Metrics per Annotator](#Metrics-per-Annotator)\n",
+    "        1. [Responses as Ground Truth](#Responses-as-Ground-Truth)\n",
+    "        2. [Suggestions as Ground Truth](#Suggestions-as-Ground-Truth)\n",
     "    2. [Metrics for Unified Responses](#Metrics-for-Unified-Responses)\n",
+    "        1. [Responses as Ground Truth](#Responses-as-Ground-Truth-for-Unified-Responses)\n",
+    "        2. [Suggestions as Ground Truth](#Suggestions-as-Ground-Truth-for-Unified-Responses)\n",
     "4. [Conclusion](#Conclusion)\n"
    ]
   },
@@ -131,13 +137,20 @@
    "metadata": {},
    "source": [
     "### Enable Telemetry\n",
-    "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the Telemetry page.\n",
-    "\n",
-    "```python\n",
-    "from argilla.utils.telemetry import tutorial_running\n",
-    "\n",
-    "tutorial_running()\n",
-    "```"
+    "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the Telemetry page."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    from argilla.utils.telemetry import tutorial_running\n",
+    "    tutorial_running()\n",
+    "except ImportError:\n",
+    "    print(\"Telemetry module is introduced in Argilla 1.20.0 and not found in the current installation. Skipping telemetry.\")"
    ]
   },
   {
@@ -147,10 +160,7 @@
     "## Pull the Dataset\n",
     "\n",
     "To employ metrics, we can pull a dataset that consists of multiple annotations per record. We can do this either from Argilla or HuggingFace Hub. Let us see how we can pull it from both sources.\n",
-    "\n",
-    "### From Argilla\n",
-    "\n",
-    "We can pull the dataset from Argilla by using the `from_argilla` method. "
+    "\n"
    ]
   },
   {
@@ -223,6 +233,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### From Argilla\n",
+    "\n",
+    "We can pull the dataset from Argilla by using the `from_argilla` method. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Unify Responses"
    ]
   },
@@ -285,7 +304,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Annotator Metrics\n",
+    "## Annotator Metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Annotator metrics refer to the metrics where the responses from each annotator (or the unified response) are compared against the suggestions we have added to the model. This type of metric is useful to see how each annotator individually or all annotators collectively perform on the dataset. Argilla offers various metrics and you can access the list of the available ones by referring to the [metrics](#linkt-to-metrics) page. Alternatively, you can discover the available metrics by using the `allowed_metrics` method.\n",
     "\n",
@@ -319,7 +344,14 @@
    "source": [
     "### Metrics per Annotator\n",
     "\n",
-    "In AnnotatorMetrics, we have two options to pick the ground truths, against which we want to make the comparison: responses or suggestions. You can have more info regarding this on [this page](#annotator-metrics).\n",
+    "In AnnotatorMetrics, we have two options to pick the ground truths, against which we want to make the comparison: responses or suggestions. You can have more info regarding this on [this page](#annotator-metrics)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Responses as Ground Truth\n",
     "\n",
     "Let us first select responses as our ground truths and compare the suggestions to them. \n",
     "\n",
@@ -365,6 +397,13 @@
    ],
    "source": [
     "responses_metrics[\"00000000-0000-0000-0000-000000000004\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Suggestions as Ground Truth"
    ]
   },
   {
@@ -441,6 +480,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Responses as Ground Truth for Unified Responses\n",
+    "\n",
+    "Let us first select responses as our ground truths and compare the unified responses to them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -476,6 +524,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Suggestions as Ground Truth for Unified Responses\n",
+    "\n",
     "Similarly, if want to select suggestions as our ground truths and calculate the metrics against them, we can do it as follows."
    ]
   },
