docs: added `parameter` tags to notebooks

--- a/docs/_source/getting_started/quickstart_workflow.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow.ipynb
@@ -105,16 +105,18 @@
       "execution_count": null,
       "id": "IiJiKTi-dgLp",
       "metadata": {
-        "id": "IiJiKTi-dgLp"
+        "id": "IiJiKTi-dgLp",
+        "tags": [
+          "parameters"
+        ]
       },
       "outputs": [],
       "source": [
-        "import os\n",
-        "\n",
-        "# Set your variable here\n",
-        "os.environ[\"ARGILLA_API_URL\"] = \"http://localhost:6900\" # or https://[your-owner-name]-[your_space_name].hf.space\n",
-        "os.environ[\"ARGILLA_API_KEY\"] = \"owner.apikey\"\n",
-        "# os.environ['HF_TOKEN'] = \"your-hf-token\" # if you want to use your private HF Space"
+        "# Argilla credentials\n",
+        "api_url = \"http://localhost:6900\"  # \"https://<YOUR-HF-SPACE>.hf.space\"\n",
+        "api_key = DEFAULT_API_KEY  # admin.apikey\n",
+        "# Huggingface credentials\n",
+        "hf_token = \"hf_...\""
       ]
     },
     {
@@ -132,10 +134,10 @@
       "source": [
         "import argilla as rg\n",
         "\n",
-        "rg.init(workspace=\"admin\")\n",
+        "rg.init(api_url=api_url, api_key=api_key, workspace=\"admin\")\n",
         "\n",
         "# If you want to use your private HF Space\n",
-        "# rg.init(workspace=\"admin\", extra_headers={\"Authorization\": f\"Bearer {os.environ['HF_TOKEN']}\"})"
+        "# rg.init(api_url=api_url, api_key=api_key, workspace=\"admin\", extra_headers={\"Authorization\": f\"Bearer {os.environ['HF_TOKEN']}\"})"
       ]
     },
     {
