--- a/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
@@ -98,15 +98,18 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "tags": [
+          "parameters"
+        ]
+      },
       "outputs": [],
       "source": [
-        "import os\n",
-        "\n",
-        "# Set your variable here\n",
-        "os.environ[\"ARGILLA_API_URL\"] = \"http://localhost:6900\" # or https://[your-owner-name]-[your_space_name].hf.space\n",
-        "os.environ[\"ARGILLA_API_KEY\"] = \"owner.apikey\"\n",
-        "# os.environ['HF_TOKEN'] = \"your-hf-token\" # if you want to use your private HF Space"
+        "# Argilla credentials\n",
+        "api_url = \"http://localhost:6900\"  # \"https://<YOUR-HF-SPACE>.hf.space\"\n",
+        "api_key = DEFAULT_API_KEY  # admin.apikey\n",
+        "# Huggingface credentials\n",
+        "hf_token = \"hf_...\""
       ]
     },
     {
@@ -117,10 +120,10 @@
       "source": [
         "import argilla as rg\n",
         "\n",
-        "rg.init(workspace=\"admin\")\n",
+        "rg.init(api_url=api_url, api_key=api_key, workspace=\"admin\")\n",
         "\n",
         "# If you want to use your private HF Space\n",
-        "# rg.init(workspace=\"admin\", extra_headers={\"Authorization\": f\"Bearer {os.environ['HF_TOKEN']}\"})"
+        "# rg.init(api_url=api_url, api_key=api_key, workspace=\"admin\", extra_headers={\"Authorization\": f\"Bearer {os.environ['HF_TOKEN']}\"})"
       ]
     },
     {
@@ -389,6 +392,7 @@
     {
       "cell_type": "code",
       "execution_count": 12,
+      "id": "fce6c2d2",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -430,6 +434,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "1599a179",
       "metadata": {},
       "source": [
         "#### Add the Records"
@@ -446,6 +451,7 @@
     {
       "cell_type": "code",
       "execution_count": 15,
+      "id": "d2a8bfa0",
       "metadata": {},
       "outputs": [
         {
