--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -16,15 +16,13 @@
   "shortcuts": {
     "label": "Shortcuts",
     "pagination": {
-      "go_to_previous_record": "Previous (ctrl + ←)",
-      "go_to_next_record": "Next (ctrl + →)",
-      "go_to_previous_record_mac": "Previous (⌘ cmd + ←)",
-      "go_to_next_record_mac": "Next (⌘ cmd + →)"
+      "go_to_previous_record": "Previous (←)",
+      "go_to_next_record": "Next (→)"
     },
     "questions_form": {
-      "clear": "Clear (⇧ shift + ␣ space)",
-      "discard": "Discard (⇧ shift + ⌫ backspace)",
-      "submit": "Submit (⇧ shift + ↵ enter)"
+      "clear": "Clear",
+      "discard": "Discard (⌫ backspace)",
+      "submit": "Submit (↵ enter)"
     }
   },
   "sorting": {
