--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -10,6 +10,7 @@
     "ignore_and_continue": "Ignore and continue"
   },
   "to_submit_complete_required": "To submit complete required responses",
+  "to_annotate_record_bulk_required": "To annotate you must select at least one record",
   "changes_no_submit": "You didn't submit your changes",
   "shortcuts": {
     "label": "Shortcuts",
